fixed deprecated API warnings